--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
   </head>
   <body>
     <h2>Firebase Course</h2>
-    <iframe
-      width="560"
-      height="315"
-      src="https://www.youtube-nocookie.com/embed/videoseries?list=PL4cUxeGkcC9itfjle0ji1xOZ2cjRGY_WB"
-      frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-    ></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLzMcBGfZo4-lwGZWXz5Qgta_YNX3_vLS2" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
