--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Distraction Free Playlist</title>
   </head>
   <body>
+    <h2>EZ Systems</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pVWbUdI9yBo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h2>Tech With Tim Flappy Bird</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLzMcBGfZo4-lwGZWXz5Qgta_YNX3_vLS2" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h2>Firebase Cloud Functions</h2>
