--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <title>Distraction Free Playlist</title>
   </head>
   <body>
-    <h2>EZ Systems</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/pVWbUdI9yBo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h2>Tech With Tim Flappy Bird</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLzMcBGfZo4-lwGZWXz5Qgta_YNX3_vLS2" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h2>Firebase Cloud Functions</h2>
    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL4cUxeGkcC9i_aLkr62adUTJi53y7OjOf" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h2>Habits</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/0bxIg3M_MHY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h2>Tutorial Videos</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/IrrdC_pkmGM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/o6o_6R2lbE4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  
   </body>
 </html>
