--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h2>How to build Platform Game</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLw9KfhYGNNBcozAxh2akJFcRVD5VluXiW" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p><a href="https://github.com/kidscancode/pygame_tutorials/blob/master/pygame%20template.py">Pygame Template</a></p>
     <h2>Tech With Tim Flappy Bird</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLzMcBGfZo4-lwGZWXz5Qgta_YNX3_vLS2" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h2>Firebase Cloud Functions</h2>
