--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Distraction Free Playlist</title>
   </head>
-        <h2>FastLEDs</h2>
+  <body>  
+  
+    <h2>C# Videos Series</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL82C6-O4XrHf49SjEZWSa5DHN--ZRrcN_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <h2>C# ASP.NET</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL82C6-O4XrHde_urqhKJHH-HTUfTK6siO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    
+  <h2>FastLEDs</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLgXkGn3BBAGi5dTOCuEwrLuFtfz0kGFTC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h2>React Course</h2>
