--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Distraction Free Playlist</title>
   </head>
   <body>  
+    <h2>IMovie Course</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jhGG7ypIW_w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+
     <h2>Wokwi Component Tutorial</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=xjQmzSE3YswgllSH&amp;list=PLLomdjsHtJTzJpHEYhw3Du9kO9mgypE79" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>Collections</h2>
